Fix pagebreak in the middle of a line

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -31,6 +31,10 @@
 }
 
 .barcode-line {
+    break-inside: avoid;
+}
+
+.barcode-col {
     padding: 0;
     
 }
